# aetherweave-artifact

./: .gitmodules  README.md  aetherweave-testnet-generated_32.yaml  bootstrap_kurtosis.py  justfile  keys.csv  setup_simulation.sh
aw_docker/: Dockerfile
aw_docker/zk/: share_proof.wasm  share_proof_0001.zkey  share_proof_verification_key.json  stake_proof.wasm  stake_proof_verification_key.json
cAdvisor/: Modifications.md
ethereum-package-4.6.0/src/package_io/: constants.star
measurements/: docker-compose.yml
measurements/prometheus/: prometheus.yml
prysm/: .gitignore  README.md  build.sh  build_aw_protobufs.sh  build_docker.sh  deps.bzl  go.mod  go.sum  run_docker.sh
prysm/beacon-chain/execution/: engine_client.go  rpc_connection.go
prysm/beacon-chain/execution/testing/: mock_engine_client.go
prysm/beacon-chain/node/: node.go
prysm/beacon-chain/p2p/: BUILD.bazel  discovery.go  interfaces.go  rpc_topic_mappings.go  sender.go  service.go
prysm/beacon-chain/p2p/testing/: fuzz_p2p.go  mock_peermanager.go  p2p.go
prysm/beacon-chain/p2p/types/: rpc_errors.go
prysm/beacon-chain/sync/: BUILD.bazel  aetherweave.go  aetherweave_test.go  aetherweave_zk.go  aetherweave_zk_test.go  options.go  rate_limiter.go  rpc.go  rpc_aetherweave.go  rpc_aetherweave_test.go  service.go
prysm/beacon-chain/sync/awcontract/: BUILD.bazel  aetherweaveprivate.go
prysm/beacon-chain/sync/testdata/share_proof/: full_zkproof.json  input.json  proof.json  public.json  share_proof.r1cs  share_proof.sym  witness.wtns
prysm/beacon-chain/sync/testdata/stake_proof/: input.json  proof.json  public.json  stake_proof.r1cs  stake_proof.sym  witness.wtns
prysm/beacon-chain/sync/testdata/zk/: share_proof.wasm  share_proof_0001.zkey  share_proof_verification_key.json  stake_proof.wasm  stake_proof_verification_key.json
prysm/cmd/: flags.go
prysm/cmd/beacon-chain/: main.go  usage.go
prysm/proto/prysm/v1alpha1/: BUILD.bazel  aetherweave.pb.go  aetherweave.proto  phase0.ssz.go
prysm/rapidsnark/prover/: BUILD.bazel  WORKSPACE  rapidsnark.go
prysm/smart_contract/: ape-config.yaml  justfile  package.json  requirements.txt
prysm/smart_contract/circuits/: same_secret.circom  share_proof.circom  stake_proof.circom
prysm/smart_contract/circuits/lib/: README.md
prysm/smart_contract/circuits/lib/solarity/bitify/: operations.circom
prysm/smart_contract/circuits/lib/solarity/data-structures/: SparseMerkleTree.circom
prysm/smart_contract/circuits/lib/solarity/int/: arithmetic.circom
prysm/smart_contract/contracts/: AetherWeaveBasic.sol  AetherWeavePrivate.sol  lib_addr.txt
prysm/smart_contract/contracts/lib/: PoseidonT3.sol  PoseidonT4.sol  README.md
prysm/smart_contract/scripts/: babyjub.js
prysm/smart_contract/tests/: conftest.py  snark.py  test_basic_contract.py  test_private_contract.py  test_proofs.py  utils.py
prysm/testing/spectest/shared/common/forkchoice/: service.go
prysm/wasmer/wasmer/: BUILD.bazel  WORKSPACE
rapidsnark/: Makefile  rapidsnark_modifications.diff
rapidsnark/src/: binfile_utils.cpp  binfile_utils.hpp
